<resources>
    <string name="app_name">OPAMA Collection</string>
    <string name="img_1">Boneka Sapi,Tinggi 75 cm, Panjang 65 cm, Lebar 20 cm, Berat 1 kg</string>
    <string name="img_2">Boneka Tasmania, Tinggi 70 cm, Panjang 48 cm, Lebar  20 cm, Berat 1 kg</string>
    <string name="img_3">Jerapah kuning, Tinggi 35 cm, Panjang 20 cm, Lebar 18 cm, Berat 1 kg</string>
    <string name="img_4">Mickey Mouse, Tinggi 50 cm, Panjang 35 cm, Lebar 10 cm, Berat 1 kg</string>
    <string name="img_5">Minnie Mouse,  Tinggi 50 cm, Panjang 35 cm, Lebar 10 cm, Berat 1 kg</string>
    <string name="img_6">Hello kitty, Tinggi 35 cm, Panjang 35 cm, Lebar 10 cm, Berat 1 kg</string>
    <string name="harga_1">IDR 100.000</string>
    <string name="harga_2">IDR 75.000</string>
    <string name="harga_3">IDR 65.000</string>
    <string name="harga_4">IDR 50.000</string>
    <string name="hint">Nama</string>
    <string name="hint1">Alamat</string>
    <string name="hint2">No. Handphone</string>
    <string name="pilihan">Pilihan</string>
    <string name="wisuda">Aksesoris Wisuda (+IDR 30.000)</string>
    <string name="kado">Bungkus Kado (+IDR 10.000)</string>
    <string name="jumlah">Jumlah</string>
    <string name="boneka_menu_btn">order</string>
    <string name="fashion_menu_btn">order</string>
    <string name="jilbab_menu_btn">order</string>
    <string name="dec">-</string>
    <string name="inc">+</string>
    <string name="jum_value">0</string>
    <string name="order">order</string>
</resources>
