<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:background="#ECC7C1"
    tools:context="com.opama.ditha.opamacollection.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE6EB">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic_1" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="130dp"
                android:layout_height="75dp"
                android:layout_alignTop="@+id/img_1"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/img_1"
                android:layout_toRightOf="@+id/img_1"
                android:text="@string/img_1"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_1"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignStart="@+id/textView1"
                android:text="@string/harga_1"
                android:textColor="@android:color/black"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/purple"
                android:text="buy"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </RelativeLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_margin="3dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE6EB">

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic_2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="75dp"
                android:layout_alignTop="@+id/img_2"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/img_2"
                android:layout_toRightOf="@+id/img_2"
                android:text="@string/img_2"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:text="@string/harga_1"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/purple"
                android:text="buy"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </RelativeLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE6EB">

            <ImageView
                android:id="@+id/img_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic_3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="75dp"
                android:layout_alignTop="@+id/img_3"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/img_3"
                android:layout_toRightOf="@+id/img_3"
                android:text="@string/img_3"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_3"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:text="@string/harga_4"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/purple"
                android:text="buy"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </RelativeLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE6EB">

            <ImageView
                android:id="@+id/img_4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic_4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="75dp"
                android:layout_alignTop="@+id/img_4"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/img_4"
                android:layout_toRightOf="@+id/img_4"
                android:text="@string/img_4"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_4"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:text="@string/harga_3"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/purple"
                android:text="buy"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </RelativeLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE6EB">

            <ImageView
                android:id="@+id/img_5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic_5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="120dp"
                android:layout_height="75dp"
                android:layout_alignTop="@+id/img_5"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/img_5"
                android:layout_toRightOf="@+id/img_5"
                android:text="@string/img_5"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:text="@string/harga_3"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/purple"
                android:text="buy"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </RelativeLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_margin="3dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFE6EB">

            <ImageView
                android:id="@+id/img_6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic_6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="120dp"
                android:layout_height="75dp"
                android:layout_alignTop="@+id/img_6"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/img_6"
                android:layout_toRightOf="@+id/img_6"
                android:text="@string/img_6"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_6"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:text="@string/harga_2"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/purple"
                android:text="buy"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
